# hackathon

./: CMakeLists.txt  README.md  package.xml  setup.py
msg/: Marker.msg  MarkerArray.msg
src/: aruco.py  publisher.cpp  publisher.py  subscriber.cpp  subscriber.py
util/: graphical_pub.py
